# Metier

./: .gitignore  CMakeLists.txt  Metier_Chart.cpp  Metier_Chart.h  Metier_CurlWrapper.h  Metier_Indicators.cpp  Metier_Indicators.h  Metier_Series.cpp  Metier_Series.h  Metier_TCallback.cpp  Metier_TCallback.h  Metier_TCallback_OLD.cpp  Metier_Ticker.cpp  Metier_Ticker.h  Metier_app.cpp  Metier_app.h
